@@ -367,7 +367,7 @@
       <module id="alacarte"/>
       <module id="bug-buddy"/>
       <module id="dasher" branch="gnome-2-18"/>
-      <module id="deskbar-applet"/>
+      <module id="deskbar-applet" branch="gnome-2-18"/>
       <module id="eel" branch="gnome-2-18"/>
       <module id="ekiga" branch="gnome-2-14"/>
       <module id="eog" branch="gnome-2-18"/>
