@@ -1,3 +1,8 @@
+2007-06-07  Claude Paroz  <claude@2xlibre.net>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in: deskbar-applet branched for 2.18.
+
 2007-05-26  Claude Paroz  <claude@2xlibre.net>
 
 	* gnome-modules.xml.in:
